--- a/Sparta/tags.html
+++ b/Sparta/tags.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>나의 첫 홈페이지</title>
 </head>
 <body>
-    
+    나의 첫번째 홈페이지
 </body>
 </html>
