--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
                 console.log(data)
 
                 let tempValue = data['temp']
-
-                let temp_html = `${tempValue}`
-
-                $('#temp').text(temp_html)
+                $('#temp').text(tempValue)
             })
         })
 
